# os

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  README.md
.github/workflows/: build.yaml  build.yml  ci.yaml  docs.yml  format.yaml  format.yml
cmake/: ClangFormat.cmake  ClangTidy.cmake  utils.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/cmake/: GenerateDocs.cmake.in
include/: CMakeLists.txt  limits.h  stdio.h  string.h
include/kernel/: CMakeLists.txt  error.h  runtime.h  tty.h
include/kernel/arch/i386/pc/: CMakeLists.txt  except.h  gdt.h  idt.h  isr.h  tss.h  vga.h
lib/: CMakeLists.txt
lib/libc/: CMakeLists.txt  strlen.c
lib/libc/stdio/: printf.c
lib/libc/string/: memcpy.c  memset.c  strlen.c
src/: CMakeLists.txt
src/image/: CMakeLists.txt
src/image/iso/boot/grub/: grub.cfg.in
src/kernel/: CMakeLists.txt  error.c  main.c  tty.c
src/kernel/arch/i386/pc/: CMakeLists.txt  boot.s  except.c  gdt.c  gdt.s  idt.c  idt.s  isr.s  link.ld  main.c  tss.c  tss.s  vga.c
src/kernel/arch/x86_64/pc/: CMakeLists.txt  boot.s
